Closed
Bug 1618980
Opened 6 years ago
Closed 6 years ago
ChannelWrapper returns incorrect requestSize and responseSize
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla75
People
(Reporter: xeonchen, Assigned: xeonchen)
References
Details
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
Bug 1545423 introduced ChannelWrapper.requestSize and ChannelWrapper.responseSize, but these values are cached and never refreshed. If the value had been read before nsHttpChannel::OnStopRequest, it will always be zero.
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Attachment #9129861 -
Attachment description: Bug 1618980 - clear RequestSize/ResponseSiz cache; → Bug 1618980 - clear RequestSize/ResponseSize cache;
Pushed by xeonchen@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/f55efd6af146
clear RequestSize/ResponseSize cache; r=mixedpuppy
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
| Assignee | ||
Comment 4•6 years ago
|
||
Comment on attachment 9129861 [details]
Bug 1618980 - clear RequestSize/ResponseSize cache;
Beta/Release Uplift Approval Request
- User impact if declined: Bug 1614777 may not able to collect bandwidth data on certain profiles.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This only reset cached values on some specific criteria.
- String changes made/needed: N/A
Attachment #9129861 -
Attachment description: Bug 1618980 - clear RequestSize/ResponseSize cache; → Bug 1618980 - clear RequestSize/ResponseSiz cache;
Attachment #9129861 -
Flags: approval-mozilla-beta?
| Assignee | ||
Updated•6 years ago
|
Attachment #9129861 -
Attachment description: Bug 1618980 - clear RequestSize/ResponseSiz cache; → Bug 1618980 - clear RequestSize/ResponseSize cache;
Comment 5•6 years ago
|
||
Comment on attachment 9129861 [details]
Bug 1618980 - clear RequestSize/ResponseSize cache;
Patch is minimal and needed for the study in 74, uplift approved for the beta branch before RC.
Attachment #9129861 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•6 years ago
|
||
| bugherder uplift | ||
status-firefox74:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•