Bug 1618980 - clear RequestSize/ResponseSize cache; r=mixedpuppy a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D64812